<resources>
    <string name="app_name">SmartTracker</string>
    <string name="your_login">E-mail</string>
    <string name="your_password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="log_in">Sign in</string>
    <string name="create_new_account">Registration</string>
    <string name="restore">Restore account</string>
    <string name="sign_out">Sign out</string>
    <string name="profile_layout">Personal details</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="laboratory_number">Laboratory number</string>
</resources>
